# LangChain-HandsOn

./: .gitignore  README.md  ai_app.py  chains_basic.py  chains_branching.py  chains_extended.py  chains_parallel.py  chains_under_the_hood.py  chat_model_basic.py  chat_model_basic_conversation.py  chat_model_conversation_with_user.py  chat_model_save_message_history_firebase.py  doc_scraper.py  doc_scraper_ssl.py  llama_rag.py  main.py  prompt_template_basic.py  prompt_template_with_chat_model.py  pyproject.toml  rag_basic.py  rag_basic_metadata.py  rag_llama.py  test.cpp
